Bug 330880 - Names of attached files containing a # are not handled correctly
Summary: Names of attached files containing a # are not handled correctly
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.12.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-07 08:55 UTC by Tobias Leupold
Modified: 2014-02-10 12:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Leupold 2014-02-07 08:55:12 UTC
When saving an attached file with a name containing a #, the file name is cut off after the #, including it in the "save as" dialog. E. g. "OPG 16.01.2014 #2.jpg" becomes "OPG 16.01.2014 ".
Comment 1 Laurent Montel 2014-02-07 10:33:53 UTC
I will investigate it.
Comment 2 Tobias Leupold 2014-02-10 11:11:16 UTC
Still present in 4.12.2
Comment 3 Laurent Montel 2014-02-10 12:25:09 UTC
Git commit 4b0231304bdf06ed7150cd5337904b375b38fb6b by Montel Laurent.
Committed on 10/02/2014 at 12:24.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 330880 - Names of attached files containing a # are not handled correctly

FIXED-IN: 4.12.3

M  +3    -1    messageviewer/utils/util.cpp

http://commits.kde.org/kdepim/4b0231304bdf06ed7150cd5337904b375b38fb6b