Fix Bug 330880 - Names of attached files containing a # are not handled correctly

FIXED-IN: 4.12.3
BUG: 330880